--- a/Foodtruck.Grafico/Foodtruck.Grafico.csproj
+++ b/Foodtruck.Grafico/Foodtruck.Grafico.csproj
@@ -64,6 +64,12 @@
     <Compile Include="ManterCliente.Designer.cs">
       <DependentUpon>ManterCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManterLanche.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManterLanche.Designer.cs">
+      <DependentUpon>ManterLanche.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TelaListaClientes.cs">
@@ -71,6 +77,12 @@
     </Compile>
     <Compile Include="TelaListaClientes.Designer.cs">
       <DependentUpon>TelaListaClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TelaListaLanche.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaListaLanche.Designer.cs">
+      <DependentUpon>TelaListaLanche.cs</DependentUpon>
     </Compile>
     <Compile Include="TelaPrincipal.cs">
       <SubType>Form</SubType>
@@ -84,6 +96,9 @@
     <EmbeddedResource Include="ManterCliente.resx">
       <DependentUpon>ManterCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ManterLanche.resx">
+      <DependentUpon>ManterLanche.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -95,6 +110,9 @@
     </Compile>
     <EmbeddedResource Include="TelaListaClientes.resx">
       <DependentUpon>TelaListaClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaListaLanche.resx">
+      <DependentUpon>TelaListaLanche.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaPrincipal.resx">
       <DependentUpon>TelaPrincipal.cs</DependentUpon>
